# DUAL

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
configs/: config.yaml
configs/dataset/: miniImageNet.yaml
configs/model/: dual_resnet12.yaml
configs/optimizer/: adam.yaml
configs/scheduler/: step.yaml
configs_template/: dataset_config.py  erm_training_config.py  experiment_config.py  list_config.py  model_config.py  pretraining_config.py  training_config.py
configs_template/all_datasets_configs/: cifar_100_c_config.py  corrupted_tiered_imagenet_c_config.py  femnist_config.py  meta_dataset_config.py  mini_imagenet_c_config.py  regular_tiered_imagenet_c_config.py
configs_template/dataset_specs/cifar_100_c/: test.json  train.json  val.json
configs_template/dataset_specs/meta_dataset/: test.json  train.json  valid.json
configs_template/dataset_specs/tiered_imagenet_c/: test.json  train.json  train_simclr.json  val.json
data/: README.md
docs/: contributing.md  index.html
examples/: basic_training.py
scripts/: erm_testing.py  erm_training.py  evaluate.py  run_exp.py  test_meta.py  train.py  train_meta_baseline.py  verify_setup.py
src/: NTXentLoss.py  erm_trainer.py  erm_training_steps.py  pretrain.py  running_steps.py  shift_level.py  training_statistics.py  transforms.py  utils.py
src/data_tools/: perturbations.py  sqsdataset.py  transform.py  utils.py
src/data_tools/datasets/: cifar_c_meta.py  cifar_c_meta_old.py  femnist.py  meta_h5_dataset.py  meta_val_dataset.py  mini_imagenet_c.py  tiered_imagenet_c.py
src/data_tools/datasets/meta_dataset/: __init__.py  args.py  config.py  dataset_spec.py  imagenet_specification.py  imagenet_stats.py  pipeline.py  reader.py  sampling.py  transform.py  utils.py
src/data_tools/datasets/meta_dataset/tfrecord/: example_pb2.py  iterator_utils.py  reader.py  writer.py
src/data_tools/datasets/meta_dataset/tfrecord/torch/: dataset.py
src/data_tools/samplers/: before_corruption_sampler.py
src/dual/: __init__.py
src/dual/data/: __init__.py
src/dual/models/: __init__.py
src/dual/utils/: __init__.py
src/methods/: abstract_meta_learner.py  matchingnet.py  maximum_a_posteriori.py  protonet.py  transductive_fine_tuning.py  transductive_propagation_net.py  uda_ot.py
src/modules/: backbones.py  batch_norm.py  optimal_transport.py
tests/: README.md  conftest.py  test_models.py
